# alsa-gobject

./: README.rst  meson.build  meson_options.txt  valgrind-glib.suppressions
.github/workflows/: build.yml
debian/: alsa-gobject-dev.install  alsa-gobject-dev.links  changelog  control  copyright  gir1.2-alsactl-0.0.install  gir1.2-alsahwdep-0.0.install  gir1.2-alsarawmidi-0.0.install  gir1.2-alsaseq-0.0.install  gir1.2-alsatimer-0.0.install  libalsactl0.install  libalsactl0.symbols  libalsahwdep0.install  libalsahwdep0.symbols  libalsarawmidi0.install  libalsarawmidi0.symbols  libalsaseq0.install  libalsaseq0.symbols  libalsatimer0.install  libalsatimer0.symbols  rules  watch
debian/upstream/: signing-key.asc
doc/: index.html.in  meson.build
doc/ctl/: alsactl.toml.in  meson.build  overview.md
doc/hwdep/: alsahwdep.toml.in  meson.build  overview.md
doc/rawmidi/: alsarawmidi.toml.in  meson.build  overview.md  urlmap.js
doc/reference/: meson.build
doc/reference/ctl/: alsactl-docs.xml  alsactl.types  meson.build
doc/reference/hwdep/: alsahwdep-docs.xml  alsahwdep.types  meson.build
doc/reference/rawmidi/: alsarawmidi-docs.xml  alsarawmidi.types  meson.build
doc/reference/seq/: alsaseq-docs.xml  alsaseq.types  meson.build
doc/reference/timer/: alsatimer-docs.xml  alsatimer.types  meson.build
doc/seq/: alsaseq.toml.in  meson.build  overview.md  urlmap.js
doc/timer/: alsatimer.toml.in  meson.build  overview.md
samples/: ctl  hwdep  rawmidi  seq  timer
src/: meson.build
src/ctl/: alsactl-enum-types.h  alsactl-sigs-marshal.list  alsactl.h  alsactl.map  card-info.c  card-info.h  card.c  card.h  elem-id.c  elem-id.h  elem-info-bool.c  elem-info-bool.h  elem-info-boolean.c  elem-info-boolean.h  elem-info-bytes.c  elem-info-bytes.h  elem-info-common.c  elem-info-common.h  elem-info-enum.c  elem-info-enum.h  elem-info-enumerated.c  elem-info-enumerated.h  elem-info-iec60958.c  elem-info-iec60958.h  elem-info-int.c  elem-info-int.h  elem-info-int64.c  elem-info-int64.h  elem-info-integer.c  elem-info-integer.h  elem-info-integer64.c  elem-info-integer64.h  elem-info-single-array.c  elem-info-single-array.h  elem-info.c  elem-info.h  elem-value.c  elem-value.h  meson.build  privates.h  (+2 more)
src/hwdep/: alsahwdep-enum-types.h  alsahwdep.h  alsahwdep.map  device-common.c  device-common.h  device-info.c  device-info.h  meson.build  privates.h  query.c  query.h
src/rawmidi/: alsarawmidi-enum-types.h  alsarawmidi.h  alsarawmidi.map  meson.build  privates.h  query.c  query.h  stream-pair.c  stream-pair.h  substream-info.c  substream-info.h  substream-params.c  substream-params.h  substream-status.c  substream-status.h
src/seq/: addr.c  addr.h  alsaseq-enum-types.h  alsaseq.h  alsaseq.map  client-info.c  client-info.h  client-pool.c  client-pool.h  event-cntr.c  event-cntr.h  event-data-connect.c  event-data-connect.h  event-data-ctl.c  event-data-ctl.h  event-data-note.c  event-data-note.h  event-data-queue.c  event-data-queue.h  event-data-result.c  event-data-result.h  event-fixed.c  event-fixed.h  event-variable.c  event-variable.h  event.c  event.h  meson.build  port-info.c  port-info.h  privates.h  query.c  query.h  queue-info.c  queue-info.h  queue-status.c  queue-status.h  queue-tempo.c  queue-tempo.h  queue-timer-alsa.c  (+17 more)
src/timer/: alsatimer-enum-types.h  alsatimer.h  alsatimer.map  device-id.c  device-id.h  device-info.c  device-info.h  device-params.c  device-params.h  device-status.c  device-status.h  event-data-tick.c  event-data-tick.h  event-data-timestamp.c  event-data-timestamp.h  event-data-tstamp.c  event-data-tstamp.h  event-data.c  event-data.h  event.c  event.h  instance-info.c  instance-info.h  instance-params.c  instance-params.h  instance-status.c  instance-status.h  meson.build  privates.h  query.c  query.h  real-time-event.c  real-time-event.h  tick-event.h  tick-time-event.c  tick-time-event.h  tstamp-event.c  user-instance.c  user-instance.h
src/utils/: ioctl.c  meson.build  string.c  sysfs.c  utils.h
tests/: alsactl-card  alsactl-card-info  alsactl-elem-id  alsactl-elem-info  alsactl-elem-info-bool  alsactl-elem-info-boolean  alsactl-elem-info-bytes  alsactl-elem-info-common  alsactl-elem-info-enum  alsactl-elem-info-enumerated  alsactl-elem-info-iec60958  alsactl-elem-info-int  alsactl-elem-info-int64  alsactl-elem-info-integer  alsactl-elem-info-integer64  alsactl-elem-info-single-array  alsactl-elem-value  alsactl-enums  alsactl-functions  alsahwdep-device-common  alsahwdep-device-info  alsahwdep-enums  alsahwdep-functions  alsarawmidi-enums  alsarawmidi-functions  alsarawmidi-stream-pair  alsarawmidi-substream-info  alsarawmidi-substream-params  alsarawmidi-substream-status  alsaseq-addr  alsaseq-client-info  alsaseq-client-pool  alsaseq-enums  alsaseq-event  alsaseq-event-cntr  alsaseq-event-data-connect  alsaseq-event-data-ctl  alsaseq-event-data-note  alsaseq-event-data-queue  alsaseq-event-data-result  (+32 more)
